# pre-commit-hook-mypy

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  example.pre-commit-config.yaml  mypy_committed.py  pyproject.toml  requirements-dev.txt  setup.py  test.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
docs/examples/: README.md  bad_file.py  good_file.py  pre-commit-config.yaml
src/pre_commit_hook_mypy/: __init__.py  cli.py  mypy_committed.py
test_example/: bad_file.py  good_file.py
tests/: conftest.py  test_mypy_committed.py
